FIX OVERFLOW OF METRO UI

--- a/css/tabs.css
+++ b/css/tabs.css
@@ -332,11 +332,10 @@ div.container-fluid > div > div > div> div > ul > li, .ligne_coktail > div > div
 
 .background {
   background-image: url(../img/cover-page.jpg);
-  height: 100vh;
-  width: 100vw;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  height: 100vh;
 }
 
 .overlay {
@@ -452,7 +451,6 @@ div.container-fluid > div > div > div> div > ul > li, .ligne_coktail > div > div
   width: 100%;
   display: inline-block;
   box-sizing: border-box;
-  background: #fff; 
   color: #fff;  
   padding: 20px;
   margin-bottom: 10px;
@@ -462,26 +460,45 @@ div.container-fluid > div > div > div> div > ul > li, .ligne_coktail > div > div
     margin-top: 0px;
 }
 
-background: darken($color_purple, 10%)
-
 .purple {
   background-color: #5133AB;
+}
+
+.purple:hover {
+  background-color: #452B91;
+  color: white;
+
 }
 
 .blue {
   background-color: #2672EC;
 }
 
-.red {
-  background-color: #AC193D;
+.blue:hover {
+  background-color: #2266D2;
+  color: white;
+
 }
+
 .orange {
   background-color: #DC572E;
 }
+
+.orange:hover {
+  background-color: #C24D29;
+  color: white;
+
+}
+
 .green {
   background-color: #00A600;
 }
 
+.green:hover {
+  background-color: #008C00;
+  color: white;
+
+}
 
 /* CSS footer */
 .list_footer{
